--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
   <body>
     <!-- Hat -->
     <header class="page-header">
-      <div class="container container__logo-header">
+      <div class="container container--header">
         <nav class="navigation">
           <!-- Logo -->
           <a href="./index4.html" class="logo-link"
