--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Hat -->
     <header class="page-header">
-      <div class="container container__logo-header">
+      <div class="container container--header">
         <nav class="navigation">
           <!-- Logo -->
           <a href="./index4.html" class="logo-link"
@@ -412,11 +412,11 @@
           </h2>
           <ul class="social-networks social-networks--footer">
             <li>
-                    <a class="social-networks__link social-networks__link--foter" href="https://www.instagram.com/">
-                      <svg class="social-networks__icon" width="20" height="20">
-                      <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
+                <a class="social-networks__link social-networks__link--foter" href="https://www.instagram.com/">
+                  <svg class="social-networks__icon" width="20" height="20">
+                    <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
             </li>
             <li>
               <a class="social-networks__link social-networks__link--foter" href="https://twitter.com/">
@@ -493,13 +493,13 @@
             </label>
           </div>
 
-          <div class="form__checkbox">
-            <label class="form__chec-label">
-              <input type="checkbox" class="form__chec-input" name="check-comment" 
+          <div class="form__check">
+            <label class="form__check-label">
+              <input type="checkbox" class="form__check-input" name="check-comment" 
               value="comment">
-              <span class="form__chec-icon"></span>
+              <span class="form__check-icon"></span>
               Погоджуюся з розсилкою та приймаю 
-              <a href="#" class="form__link">Умови договору</a>
+              <a href="#" class="form__check-link">Умови договору</a>
             </label>
           </div>
           <button class="form__button" type="submit">
