закінчує рефакторінг дз

--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
       <div class="container container--header">
         <nav class="navigation">
           <!-- Logo -->
-          <a href="./index4.html" class="logo-link"
+          <a href="./index.html" class="logo-link"
             ><span class="logo-link__text">Web</span>Studio
           </a>
           <ul class="navigation__list">
             <li class="navigation__item"><a href="./index.html" class="navigation__link">Студія</a></li>
-            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link current">Портфоліо</a></li>
+            <li class="navigation__item"><a href="./portfolio.html" class="navigation__link navigation__link--current">Портфоліо</a></li>
             <li class="navigation__item"><a href="#" class="navigation__link">Контакти</a></li>
           </ul>
         </nav>
@@ -52,7 +52,7 @@
         <div class="container">
           <h1 class="title-portfolio">Портфоліо</h1>
           <ul class="nav">
-            <li class="nav__list"><button type="button" class="nav__butten navigation__butten--all ">Усі</button></li>
+            <li class="nav__list"><button type="button" class="nav__butten navigation__butten--first ">Усі</button></li>
             <li class="nav__list"><button type="button" class="nav__butten">Веб-сайти</button></li>
             <li class="nav__list"><button type="button" class="nav__butten">Додатки</button></li>
             <li class="nav__list"><button type="button" class="nav__butten">Дизайн</button></li>
@@ -65,9 +65,9 @@
                   <img src="./images/notebook.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Технокряк</h2>
-                  <p class="title-card__text">Веб-сайт</p>
+                <div class="text">
+                  <h2 class="text__card">Технокряк</h2>
+                  <p class="text__card--link">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -77,9 +77,9 @@
                   <img src="./images/basketball-game.jpg" alt="basketball" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Постер New Orlean vs Golden Star</h2>
-                  <p class="title-card__text">Дизайн</p>
+                <div class="text">
+                  <h2 class="text__card">Постер New Orlean vs Golden Star</h2>
+                  <p class="text__card--link">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -89,9 +89,9 @@
                   <img src="./images/logo-seafood.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Ресторан Seafood</h2>
-                  <p class="title-card__text">Додаток</p>
+                <div class="text">
+                  <h2 class="text__card">Ресторан Seafood</h2>
+                  <p class="text__card--link">Додаток</p>
                 </div>
               </a>
             </li>
@@ -101,9 +101,9 @@
                   <img src="./images/headphones.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Проєкт Prime</h2>
-                  <p class="title-card__text">Маркетинг</p>
+                <div class="text">
+                  <h2 class="text__card">Проєкт Prime</h2>
+                  <p class="text__card--link">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -113,9 +113,9 @@
                   <img src="./images/boxes.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Проєкт Boxes</h2>
-                  <p class="title-card__text">Додаток</p>
+                <div class="text">
+                  <h2 class="text__card">Проєкт Boxes</h2>
+                  <p class="text__card--link">Додаток</p>
                 </div>
               </a>
             </li>
@@ -125,9 +125,9 @@
                   <img src="./images/monitor.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Inspiration has no Borders</h2>
-                  <p class="title-card__text">Веб-сайт</p>
+                <div class="text">
+                  <h2 class="text__card">Inspiration has no Borders</h2>
+                  <p class="text__card--link">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -137,9 +137,9 @@
                   <img src="./images/open-book.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Видання Limited Edition</h2>
-                  <p class="title-card__text">Дизайн</p>
+                <div class="text">
+                  <h2 class="text__card">Видання Limited Edition</h2>
+                  <p class="text__card--link">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -149,9 +149,9 @@
                   <img src="./images/commodity-label.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Проєкт LAB</h2>
-                  <p class="title-card__text">Маркетинг</p>
+                <div class="text">
+                  <h2 class="text__card">Проєкт LAB</h2>
+                  <p class="text__card--link">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -161,9 +161,9 @@
                   <img src="./images/work-on-laptop.jpg" alt="notebook" width="370" height="294" />
                   <p class="overlay__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="title">
-                  <h2 class="title-card">Growing Business</h2>
-                  <p class="title-card__text">Додаток</p>
+                <div class="text">
+                  <h2 class="text__card">Growing Business</h2>
+                  <p class="text__card--link">Додаток</p>
                 </div>
               </a>
             </li>
@@ -237,7 +237,7 @@
             <label>
               <input class="form__email" type="email" name="subscribe" placeholder="E-mail">
             </label>
-            <button class="button button-form" type="submit">Підписатися<svg class="subscribe-icon">
+            <button class="button button--form" type="submit">Підписатися<svg class="button--icon">
               <use href="./images/icons.svg/symbol-defs.svg#icon-icon-send"></use></svg>
             </button>
           </form>
