--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <div class="container container--header">
         <nav class="navigation">
           <!-- Logo -->
-          <a href="./index4.html" class="logo-link"
+          <a href="./index.html" class="logo-link"
             ><span class="logo-link__text">Web</span>Studio
           </a>
           <ul class="navigation__list">
-            <li class="navigation__item"><a href="./index.html" class="navigation__link current">Студія</a></li>
+            <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--current">Студія</a></li>
             <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфоліо</a></li>
             <li class="navigation__item"><a href="#" class="navigation__link">Контакти</a></li>
           </ul>
@@ -449,7 +449,7 @@
             <label>
               <input class="form__email" type="email" name="subscribe" placeholder="E-mail">
             </label>
-            <button class="button button-form" type="submit">Підписатися<svg class="subscribe-icon">
+            <button class="button button--form" type="submit">Підписатися<svg class="button--icon">
               <use href="./images/icons.svg/symbol-defs.svg#icon-icon-send"></use></svg>
             </button>
           </form>
@@ -502,7 +502,7 @@
               <a href="#" class="form__check-link">Умови договору</a>
             </label>
           </div>
-          <button class="form__button" type="submit">
+          <button class="button button--modal" type="submit">
             Відправити
           </button>
         </form>
